fix spacing of field forms

--- a/airbyte-webapp/src/components/GroupControls/GroupControls.module.scss
+++ b/airbyte-webapp/src/components/GroupControls/GroupControls.module.scss
@@ -2,7 +2,7 @@
 @use "../../scss/variables";
 
 $title-height: 34px;
-$group-spacing: variables.$spacing-lg;
+$group-spacing: variables.$spacing-xl;
 $border-width: variables.$border-thick;
 
 .container {
