--- a/airbyte-webapp/src/views/Connector/ServiceForm/components/Property/PropertyError.module.scss
+++ b/airbyte-webapp/src/views/Connector/ServiceForm/components/Property/PropertyError.module.scss
@@ -1,5 +1,5 @@
 @use "../../../../../scss/colors";
 
 .errorMessage {
-  color: colors.$red-400;
+  color: colors.$red;
 }
